# somredis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  README.md  cmake_install.cmake  lib_hiredis  lib_redis
analize/: keys.ods  optimize.ods  thread.ods
install/: install.sh
memory/: logfile.out  memory_leak
performance/: .performance.cpp.swp  performance.cpp
source/: CMakeLists.txt  Main.cpp  api.h  implementation.cpp  test.cc  unit_test.cpp
src/: SomRedis.cpp  SomRedis.h
test/: Test.cpp
